# memorable-ai

./: .gitignore  PYPI_SETUP.md  QUICK_PUBLISH.md  README.md  pyproject.toml  pytest.ini  setup.py  test_describe_simple.py
.github/workflows/: ci.yml  publish.yml
benchmarks/comparison/: compare_systems.py
benchmarks/locomo/: benchmark.py
docs/: PUBLISHING.md
examples/: advanced_config.py  basic_usage.py  consolidation_example.py  enterprise.py  graph_mode.py  multi_agent.py  retrieval_example.py
memorable_ai/: __init__.py  __main__.py  cli.py
memorable_ai/core/: __init__.py  consolidation.py  errors.py  extraction.py  interceptor.py  memory_engine.py  retrieval.py  storage.py  temporal.py
memorable_ai/graph/: __init__.py  builder.py
memorable_ai/integrations/: __init__.py  anthropic.py  autogen.py  langchain.py  litellm.py  openai.py
memorable_ai/modes/: __init__.py  auto.py  conscious.py  hybrid.py
memorable_ai/utils/: __init__.py  config.py  helpers.py  logging_config.py  performance.py  validators.py
scripts/: check_setup.py
